--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year Countdown</title>
+    <title>countingto2025.xyz</title> <!-- Updated title -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+    <!-- Countdown and Fireworks Container -->
     <div class="countdown-container">
         <h1>Countdown to 00:00 UK Time on 1st January</h1>
         <div id="countdown">
@@ -30,6 +32,8 @@
         </div>
     </div>
 
+    <!-- Fireworks Script -->
+    <script src="https://cdn.jsdelivr.net/npm/fireworks-js/dist/index.bundle.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
